# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  QUALITY_TOOLS.md  backend-tool-refactor.md  check.sh  format-fix.sh  format.sh  frontend-changes.md  lint.sh  pyproject.toml
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: TEST_RESULTS_AND_FIXES.md  __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_diagnostics.py  test_live_system.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
